add prefix /auth
