# internal/routes/routes.go
@@ -23,11 +23,11 @@ func SetupRoutes(storage *database.Storage, hmacSecret string) *gin.Engine {
 	config := cors.Config{
 		AllowOrigins: []string{
 			"http://localhost:3000",
-			"http://45.10.41.58:3000",
+			"http://109.73.202.151:3000",
 			"http://localhost:8080",
-			"http://45.10.41.58:8080",
-			"http://localhost:8080/swagger",
-			"http://45.10.41.58:8080/swagger",
+			"http://109.73.202.151:8080",
+			"http://localhost:8080/auth/swagger",
+			"http://109.73.202.151:8080/auth/swagger",
 		},
 		AllowMethods:     []string{"GET", "POST", "PUT", "PATCH", "DELETE", "HEAD", "OPTIONS"},
 		AllowHeaders:     []string{"Origin", "Content-Length", "Content-Type", "Authorization", "X-Requested-With", "Accept"},
@@ -37,48 +37,51 @@ func SetupRoutes(storage *database.Storage, hmacSecret string) *gin.Engine {
 	}
 	router.Use(cors.New(config))
 
-	api := router.Group("/api")
+	auth := router.Group("/auth")
 	{
-		// Public routes that don't require authorization
-		api.GET("/ping", pingHandler)
-		api.POST("/login", handlers.Login(storage, hmacSecret))
-		api.POST("/register", handlers.Register(storage))
-		api.GET("/get_user/:user_id", handlers.GetUser(storage))
-
-		// Protected routes that require authorization
-		auth := api.Group("/")
-		auth.Use(middleware.AuthMiddleware(hmacSecret))
+		api := auth.Group("/api")
 		{
-			auth.GET("/me", handlers.GetCurrentUser(storage))
-			auth.PATCH("/update_user_info", handlers.UpdateUserInfo(storage))
-			auth.GET("/get_user_roles", handlers.GetUserRoles(storage))
-			auth.GET("/get_user_properties", handlers.GetUserPermissions(storage))
+			// Public routes that don't require authorization
+			api.GET("/ping", pingHandler)
+			api.POST("/login", handlers.Login(storage, hmacSecret))
+			api.POST("/register", handlers.Register(storage))
+			api.GET("/get_user/:user_id", handlers.GetUser(storage))
 
-			//* REQUEST ROUTES
-			auth.POST("/create_user_request", handlers.CreateUserRequest(storage))
-			auth.GET("/get_request", handlers.GetRequest(storage))
-			auth.GET("/get_all_requests", handlers.GetAllRequests(storage))
-			auth.PATCH("/update_request_status", handlers.UpdateRequestStatus(storage))
-			auth.DELETE("/delete_request", handlers.DeleteRequest(storage))
+			// Protected routes that require authorization
+			protected := api.Group("/")
+			protected.Use(middleware.AuthMiddleware(hmacSecret))
+			{
+				protected.GET("/me", handlers.GetCurrentUser(storage))
+				protected.PATCH("/update_user_info", handlers.UpdateUserInfo(storage))
+				protected.GET("/get_user_roles", handlers.GetUserRoles(storage))
+				protected.GET("/get_user_properties", handlers.GetUserPermissions(storage))
 
-			//* ACHIEVEMENT ROUTES
-			auth.GET("/get_user_achievements", handlers.GetAchievementsByUserID(storage))
-			auth.POST("/create_achievement", handlers.CreateAchievement(storage))
-			auth.PATCH("/update_achievement", handlers.UpdateAchievement(storage))
-			auth.GET("/get_achievement", handlers.GetAchievementByID(storage))
-			auth.GET("/get_all_achievements", handlers.GetAllAchievements(storage))
-			auth.DELETE("/delete_achievement", handlers.DeleteAchievement(storage))
+				//* REQUEST ROUTES
+				protected.POST("/create_user_request", handlers.CreateUserRequest(storage))
+				protected.GET("/get_request", handlers.GetRequest(storage))
+				protected.GET("/get_all_requests", handlers.GetAllRequests(storage))
+				protected.PATCH("/update_request_status", handlers.UpdateRequestStatus(storage))
+				protected.DELETE("/delete_request", handlers.DeleteRequest(storage))
 
-			//* NOTIFICATION ROUTES
-			auth.POST("/create_notification", handlers.CreateNotification(storage))
-			auth.PATCH("/update_notification", handlers.UpdateNotification(storage))
-			auth.GET("/get_all_notifications", handlers.GetAllNotifications(storage))
-			auth.GET("/get_notification/:notification_id", handlers.GetNotification(storage))
-			auth.DELETE("/delete_notification", handlers.DeleteNotification(storage))
+				//* ACHIEVEMENT ROUTES
+				protected.GET("/get_user_achievements", handlers.GetAchievementsByUserID(storage))
+				protected.POST("/create_achievement", handlers.CreateAchievement(storage))
+				protected.PATCH("/update_achievement", handlers.UpdateAchievement(storage))
+				protected.GET("/get_achievement", handlers.GetAchievementByID(storage))
+				protected.GET("/get_all_achievements", handlers.GetAllAchievements(storage))
+				protected.DELETE("/delete_achievement", handlers.DeleteAchievement(storage))
+
+				//* NOTIFICATION ROUTES
+				protected.POST("/create_notification", handlers.CreateNotification(storage))
+				protected.PATCH("/update_notification", handlers.UpdateNotification(storage))
+				protected.GET("/get_all_notifications", handlers.GetAllNotifications(storage))
+				protected.GET("/get_notification/:notification_id", handlers.GetNotification(storage))
+				protected.DELETE("/delete_notification", handlers.DeleteNotification(storage))
+			}
 		}
-	}
 
-	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
+		auth.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
+	}
 
 	return router
 }
@@ -88,7 +91,7 @@ func SetupRoutes(storage *database.Storage, hmacSecret string) *gin.Engine {
 // @Tags Health
 // @Produce json
 // @Success 200 {object} map[string]string "Response with pong message"
-// @Router /api/ping [get]
+// @Router /auth/api/ping [get]
 func pingHandler(ctx *gin.Context) {
 	ctx.JSON(200, gin.H{"message": "pong"})
 }
